--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,11 @@ services:
     container_name: mysql_db
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: user_db
       MYSQL_USER: user
       MYSQL_PASSWORD: password
     volumes:
       - mysql_data:/var/lib/mysql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "3306:3306"
     healthcheck:
@@ -19,18 +19,6 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-
-  postgres:
-    image: postgres:15-alpine
-    container_name: postgres_db
-    environment:
-      POSTGRES_USER: galvatron
-      POSTGRES_PASSWORD: Megatron#123
-      POSTGRES_DB: product_db
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
 
   mongo:
     image: mongo:latest
@@ -78,6 +66,5 @@ services:
 
 volumes:
   mysql_data:
-  postgres_data:
   mongo_data:
   redis_data:
