--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,14 @@ spring.application.name=product
 
 server.port=8080
 
-# PostgreSQL configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/product_db
-spring.datasource.username=galvatron
-spring.datasource.password=Megatron#123
-spring.datasource.driver-class-name=org.postgresql.Driver
+# MySQL Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/product_db
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # MongoDB configuration
 spring.data.mongodb.uri=mongodb://localhost:27017/product_reviews_db
