--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -4,3 +4,10 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=false
+
+# Disable non-essential services for tests
+spring.data.mongodb.uri=mongodb://localhost:27017/test_reviews_db
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.kafka.bootstrap-servers=localhost:9092
