--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,10 +32,13 @@ services:
       - "27017:27017"
 
   redis:
-    image: redis/redis-stack-server:latest # This one includes RedisInsight for GUI
+    image: redis:7-alpine
     container_name: redis_cache
+    command: redis-server --save 60 1 --loglevel warning
     ports:
       - "6379:6379"
+    volumes:
+      - redis_data:/data
 
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
