--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=product
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
 server.port=8080
 
@@ -38,9 +39,20 @@ springdoc.pathsToMatch=/api/**
 # Spring Cloud OpenFeign configuration
 spring.cloud.openFeign.client.config.default.connect-timeout=5000
 spring.cloud.openFeign.client.config.default.read-timeout=5000
+spring.cloud.openfeign.circuitbreaker.enabled=true
 
-# URL of the User Service
-user.service.url=http://localhost:8081/
+# Resilience4j Circuit Breaker configuration
+resilience4j.circuitbreaker.instances.user-service.sliding-window-size=10
+resilience4j.circuitbreaker.instances.user-service.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.user-service.wait-duration-in-open-state=10s
+resilience4j.circuitbreaker.instances.user-service.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.user-service.automatic-transition-from-open-to-half-open-enabled=true
+
+# Resilience4j Retry configuration
+resilience4j.retry.instances.user-service.max-attempts=3
+resilience4j.retry.instances.user-service.wait-duration=1s
+resilience4j.retry.instances.user-service.enable-exponential-backoff=true
+resilience4j.retry.instances.user-service.exponential-backoff-multiplier=2
 
 # Kafka Producer configuration
 spring.kafka.producer.bootstrap-servers=localhost:9092
